--- a/debian/control
+++ b/debian/control
@@ -26,7 +26,7 @@ Build-Depends:
  libupower-glib-dev,
  libwnck-3-dev,
  uuid-dev,
- libc6-dev (>= 2.23),
+ libc6-dev,
  libgdk-pixbuf2.0-dev,
  valac
 Standards-Version: 3.9.8
